testsuite/tests/plugins/test-log-hooks-plugin.stderr
Log hook called

test-log-hooks-plugin.hs:4:13: error: [GHC-83865]
    • Couldn't match type ‘[Char]’ with ‘()’
      Expected: ()
        Actual: String
    • In the first argument of ‘pure’, namely ‘"type error"’
      In the expression: pure "type error"
      In an equation for ‘main’: main = pure "type error"
