testsuite/tests/plugins/test-log-hooks-plugin.hs
module Main where

main :: IO ()
main = pure "type error"
